gap fixed between list items on large

--- a/lesson4/css/large.css
+++ b/lesson4/css/large.css
@@ -22,16 +22,18 @@
     nav button {
         display: none;
     }
+    nav ul {
+        font-size: 0;
+    }
     nav ul.hide {
         display: block;
     }
     nav ul li {
         display: inline-flex;
+        font-size: 18px;
     }
     nav ul li a {
         border: none;
-        border-right: 1px solid rgba(0, 0, 0, 0.3);
         padding: .6rem 1rem;
-        flex-direction: row;
     }
 }
